# MiniCNN

./: ActivationLayer.cpp  CMakeLists.txt  CalcFunctions.cpp  CalcFunctions.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  InputLayer.cpp  LossFunction.cpp  LossFunction.h  Network.cpp  Optimizer.cpp  Optimizer.h  SoftmaxLayer.cpp  SoftmaxLayer.h  Tensor.cpp  Tensor.h  ThreadPool.cpp  ThreadPool.h  main.cpp
include/: ActivationLayer.h  InputLayer.h  Layer.h  LossFunction.h  MiniCNN.h  Network.h  Optimizer.h  ThreadPool.h  mnist_data_loader.h
src/: ActivationLayer.cpp  CalcFunctions.cpp  FullyConnectedLayer.cpp  InputLayer.cpp  LossFunction.cpp  Network.cpp  Optimizer.cpp  SoftmaxLayer.cpp  Tensor.cpp  ThreadPool.cpp  mnist_data_loader.cpp  mnist_train_test.cpp
